dfir_rs/tests/compile-fail-stable/surface_negative_loop.rs
../compile-fail/surface_negative_loop.rs